[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/art/ui/white_outline.png" type="Texture" id=1]
[ext_resource path="res://spell/projectile/projectile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.612903, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.421348, 0.767045 ), -0.999465, -0.999465, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 9.91
angle = 720.0
angle_random = 1.0
scale_curve = SubResource( 6 )
color = Color( 0.411765, 0.411765, 0.411765, 1 )
color_ramp = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.5, 3.5 )

[node name="Projectile" type="KinematicBody2D"]
position = Vector2( 124, 84 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="Outline" type="Sprite" parent="Sprite"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
show_behind_parent = true
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="Inner" type="Sprite" parent="Sprite"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
rotation = 0.785397
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TrailParticles" type="Particles2D" parent="."]
amount = 4
lifetime = 0.5
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="FreeDelayTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 8 )

[connection signal="timeout" from="FreeDelayTimer" to="." method="_on_FreeDelayTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
